# reflex-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
docs/: gc.md  semantics.md  testcases.md  vtable.md
lib/: CMakeLists.txt
lib/doxygen-header/: header.html
src/: CMakeLists.txt  main.cpp
src/AST/: AST.cpp  AST.h  ASTContext.cpp  ASTContext.h  ASTDeclaration.cpp  ASTDeclaration.h  ASTExpression.cpp  ASTExpression.h  ASTLiteral.cpp  ASTLiteral.h  ASTStatement.cpp  ASTStatement.h  ASTType.cpp  ASTType.h  ASTUtils.cpp  ASTUtils.h  ASTVisitor.h  Ast.h  AstContextManager.h  AstNodes.cpp  AstNodes.h  AstVisitor.cpp  AstVisitor.h  CMakeLists.txt  Operator.cpp  Operator.h
src/AST/Utils/: Generics.h
src/AST/Visitor/: AstPrinter.cpp  AstPrinter.h
src/ASTPrinter/: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt
src/Ast/: AstNodes.h  Operator.h
src/AstPrinter/: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt
src/Ast_old/: Ast.h  AstNodes.cpp  AstNodes.h  AstVisitor.h  CMakeLists.txt
src/CodeGen/: CMakeLists.txt  ClassDataLayout.cpp  ClassDataLayout.h  ClassInterfaceCodeGen.cpp  ClassInterfaceCodeGen.h  CodeGenTarget.h  CodeGenerator.h  FunctionGenerator.cpp  FunctionGenerator.h  LLVMTypeGenerator.cpp  LLVMTypeGenerator.h  RecordTypeCodeGen.cpp  RecordTypeCodeGen.h
src/CodeGen/JSTarget/: CodeGenJSTarget.cpp  CodeGenJSTarget.h  FunctionGenerator.cpp  FunctionGenerator.h  SourceOutputStream.cpp  SourceOutputStream.h
src/CodeGen/MachineTarget/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  FunctionGenerator.cpp  LLVMTypeGenerator.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Source.cpp  Source.h  SourceManager.cpp  SourceManager.h  Token.cpp  Token.h  TokenDesc.cpp  TokenDesc.h  TokenType.cpp  TokenType.h
src/LexicalContext/: CMakeLists.txt  LexicalContext.cpp  LexicalContext.h  LexicalContextDeclTypePass.cpp  LexicalContextDeclTypePass.h  LexicalContextForwardPass.cpp  LexicalContextForwardPass.h  LexicalContextPass.cpp  LexicalContextPass.h  LexicalContextTypePass.cpp  LexicalContextTypePass.h  LexicalScope.cpp  LexicalScope.h  SemanticAnalysisPass.cpp  SemanticAnalysisPass.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticPassManager.cpp  SemanticPassManager.h  TypeParser.cpp  TypeParser.h
src/Parser/: AstParser.cpp  CMakeLists.txt  DeclParser.cpp  ErrorHandler.cpp  ErrorHandler.h  ExprParser.cpp  LiteralParser.cpp  Parser.cpp  Parser.h  ParserType.cpp  ParsingError.cpp  ParsingError.h  StmtParser.cpp  TypeParser.cpp
src/Parser_old/: Parser.h
src/Source/: CMakeLists.txt  SourceManager.cpp  SourceManager.h  Token.cpp  Token.h
src/Type/: CMakeLists.txt  Type.cpp  Type.h  TypeContext.cpp  TypeContext.h
src/TypeChecker/: AstClassDeclAnnotator.cpp  AstClassDeclAnnotator.h  AstDeclTypeAnnotator.cpp  AstDeclTypeAnnotator.h  AstExpressionAnnotator.cpp  AstExpressionAnnotator.h  AstInterfaceDeclAnnotator.cpp  AstInterfaceDeclAnnotator.h  AstMemberAnnotator.cpp  AstMemberAnnotator.h  AstRecordTypeAnnotator.cpp  AstRecordTypeAnnotator.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstTypeAnnotator.cpp  AstTypeAnnotator.h  CMakeLists.txt  ScopeSymbolTypeTable.cpp  ScopeSymbolTypeTable.h  SemanticError.cpp  SemanticError.h
src/TypeChecker/Utils/: OperatorSemantics.cpp  OperatorSemantics.h  TopSort.h  TypeCheckerUtils.cpp  TypeCheckerUtils.h
src/Types/: CMakeLists.txt  Type.cpp  Type.h  TypeContextManager.cpp  TypeContextManager.h  TypeParser.cpp  TypeParser.h
stdlib/: String.reflex
test/: CMakeLists.txt  language_test.reflex  test.cpp
test/Lexer/: TokenTest.cpp
test/LexicalScope/: LexicalContextTest.cpp  LexicalScopeTest.cpp
test/SemanticPassTest/: ForwardPassTest.cpp
test/TestFiles/: ForwardPassTest.reflex.test  InterfaceMultipleInheritance.reflex.test  ScopeTest.reflex.test
test/Type/: ClassInterfaceTypeTest.cpp  ClassTypeTest.cpp  InterfaceTypeTest.cpp  TypeContextTest.cpp  TypeTest.cpp
tests/: language_test.reflex
